buttons work, need to align them correctly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,12 +90,18 @@ h5 {
     height: 100%;
 }
 
-
-
-
-
-
-
+#userDash {
+  display: inline block;
+  align-items: flex-end;
+}
+#logout {
+  display: inline block;
+  align-items: flex-end;
+}
+#login {
+  display: inline block;
+  align-items: flex-end;
+}
 
 
 /* styling for login button */
